用户界面 - 商品筛选、排序

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -51,7 +51,7 @@ body {
     }
 }
 
-.products-index-page {
+.products-index-page, .products-favorites-page {
   .pagination {
     margin-right: 5px;
   }
@@ -111,6 +111,11 @@ body {
         }
       }
     }
+  }
+  .search-form {
+    padding: 0 20px 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #eee;
   }
 }
 
