--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -51,10 +51,7 @@ body {
     }
 }
 
-.products-index-page, .products-favorites-page {
-  .pagination {
-    margin-right: 5px;
-  }
+@mixin product-list {
   .products-list {
     padding: 0 15px;
     .product-item {
@@ -112,6 +109,13 @@ body {
       }
     }
   }
+}
+
+.products-index-page, .products-favorites-page {
+  .pagination {
+    margin-right: 5px;
+  }
+  @include product-list;
   .search-form {
     padding: 0 20px 10px;
     border-bottom: 1px solid #eee;
@@ -287,6 +291,15 @@ body {
   }
   .product-description img {
     max-width: 100%;
+  }
+  .similar-products {
+    @include product-list;
+    .title {
+      font-weight: normal;
+    }
+    .price {
+      background-color: unset;
+    }
   }
 }
 
